[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": "For detecting when the player has been caught."
}

[node name="wTimer" type="Timer" parent="."]

[node name="sTimer" type="Timer" parent="."]

[node name="aTimer" type="Timer" parent="."]

[node name="dTimer" type="Timer" parent="."]

[node name="TempSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Placeholder sprite."
}

[connection signal="timeout" from="wTimer" to="." method="step"]
[connection signal="timeout" from="sTimer" to="." method="step"]
[connection signal="timeout" from="aTimer" to="." method="step"]
[connection signal="timeout" from="dTimer" to="." method="step"]
